--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <header>
-    <title>Welcome to my Resune</title>
+    <title>Welcome to my Resume</title>
   </header>
   <body>
     <script>
