update profile picture and name

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
   <header class="site-header">
     <div class="container">
-      <img class="avatar" src="https://via.placeholder.com/96" alt="Your portrait" />
+      <img class="avatar" src="./images/coco-profile-image.jpg" alt="Your portrait" />
       <div>
-        <h1>Your Name</h1>
+        <h1>Coco den Elzen</h1>
         <p class="tagline">Your Role • City, Country</p>
         <nav class="social">
           <a href="mailto:you@example.com">Email</a>
