--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <img class="avatar" src="./images/coco-profile-image.jpg" alt="Your portrait" />
       <div>
         <h1>Coco den Elzen</h1>
-        <p class="tagline">Your Role • City, Country</p>
+        <p class="tagline">Campaign Manager @ Criteo • Amsterdam, The Netherlands</p>
         <nav class="social">
           <a href="mailto:you@example.com">Email</a>
-          <a href="https://www.linkedin.com/in/yourprofile" target="_blank" rel="noopener">LinkedIn</a>
-          <a href="https://github.com/yourusername" target="_blank" rel="noopener">GitHub</a>
+          <a href="https://www.linkedin.com/in/cocodenelzen" target="_blank" rel="noopener">LinkedIn</a>
+          <a href="https://github.com/scalehouse" target="_blank" rel="noopener">GitHub</a>
         </nav>
       </div>
     </div>
@@ -30,9 +30,10 @@
 
   <main id="content" class="container">
     <section aria-labelledby="about">
-      <h2 id="about">About</h2>
+      <h2 id="about">a little bit about myself
+      </h2>
       <p>
-        Brief summary about you. One or two sentences that say what you do and what you’re looking for.
+        As a Campaign Manager at Criteo, I support key European clients in optimising their performance marketing strategies. I manage end-to-end campaigns, prospecting, retargeting, and retention, focused on driving measurable growth. My role involves daily data analysis, audience segmentation, budget pacing, and campaign troubleshooting. I closely monitor placement quality, brand safety, and creative performance, ensuring campaigns meet both efficiency and scale objectives. By combining analytical insights with hands-on strategy, I help partners maximise their return on ad spend and achieve long-term success.
       </p>
     </section>
 
