Change title of homepage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name — CV</title>
+  <title>Coco den Elzen's Resumé</title>
 
   <!-- Import your CSS from the /styles folder -->
   <link rel="stylesheet" href="styles/main.css" />
