Start over again

--- a/index.html
+++ b/index.html
@@ -1,106 +1,22 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Coco den Elzen's Resumé</title>
+<!DOCTYPE html>
+<html>
+  <header>
+    <title>W Resumé</title>
 
-  <!-- Import your CSS from the /styles folder -->
-  <link rel="stylesheet" href="styles/main.css" />
+    
 
-  <meta name="description" content="CV of Your Name: role, skills, experience, and contact." />
-</head>
-<body>
-  <a class="skip-link" href="#content">Skip to content</a>
 
-  <header class="site-header">
-    <div class="container">
-      <img class="avatar" src="./images/coco-profile-image.jpg" alt="Your portrait" />
-      <div>
-        <h1>Coco den Elzen</h1>
-        <p class="tagline">Campaign Manager @ Criteo • Amsterdam, The Netherlands</p>
-        <nav class="social">
-          <a href="mailto:you@example.com">Email</a>
-          <a href="https://www.linkedin.com/in/cocodenelzen" target="_blank" rel="noopener">LinkedIn</a>
-          <a href="https://github.com/scalehouse" target="_blank" rel="noopener">GitHub</a>
-        </nav>
-      </div>
-    </div>
+
+
+
+
+
+    <div></div>
+
   </header>
+  <body>
+    <script>
 
-  <main id="content" class="container">
-    <section aria-labelledby="about">
-      <h2 id="about">a little bit about myself
-      </h2>
-      <p>
-        As a Campaign Manager at Criteo, I support key European clients in optimising their performance marketing strategies. I manage end-to-end campaigns, prospecting, retargeting, and retention, focused on driving measurable growth. My role involves daily data analysis, audience segmentation, budget pacing, and campaign troubleshooting. I closely monitor placement quality, brand safety, and creative performance, ensuring campaigns meet both efficiency and scale objectives. By combining analytical insights with hands-on strategy, I help partners maximise their return on ad spend and achieve long-term success.
-      </p>
-    </section>
-
-    <section aria-labelledby="skills">
-      <h2 id="skills">Skills</h2>
-      <ul class="pill-list">
-        <li>HTML</li><li>CSS</li><li>JavaScript</li><li>Git</li><li>Figma</li>
-      </ul>
-    </section>
-
-    <section aria-labelledby="experience">
-      <h2 id="experience">Experience</h2>
-      <article class="card">
-        <header class="card-head">
-          <h3>Job Title — Company</h3>
-          <span class="meta">Jan 2024 – Present • City</span>
-        </header>
-        <ul>
-          <li>Short achievement/result you delivered.</li>
-          <li>Another bullet with a measurable outcome.</li>
-        </ul>
-      </article>
-
-      <article class="card">
-        <header class="card-head">
-          <h3>Another Role — Org</h3>
-          <span class="meta">2022 – 2023 • City</span>
-        </header>
-        <ul>
-          <li>What you did and why it mattered.</li>
-        </ul>
-      </article>
-    </section>
-
-    <section aria-labelledby="projects">
-      <h2 id="projects">Projects</h2>
-      <article class="card">
-        <header class="card-head">
-          <h3>Project Name</h3>
-          <span class="meta"><a href="#" target="_blank" rel="noopener">Live Demo</a> · <a href="#" target="_blank" rel="noopener">Code</a></span>
-        </header>
-        <p>One-line description of the project and the tech you used.</p>
-      </article>
-    </section>
-
-    <section aria-labelledby="education">
-      <h2 id="education">Education</h2>
-      <p><strong>Course/Program</strong> — School/Platform, Year</p>
-    </section>
-
-    <section aria-labelledby="contact">
-      <h2 id="contact">Contact</h2>
-      <p>
-        Prefer email? <a href="mailto:you@example.com">you@example.com</a>
-      </p>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container">
-      <small>© <span id="year"></span> Your Name</small>
-    </div>
-  </footer>
-
-  <script>
-    // tiny enhancement: keep the year current
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-</body>
+    </script>
+  </body>
 </html>
