--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <header>
+  <head>
     <title>W Resumé</title>
+    <!-- this code is needed for responsive design to work properly on a phone.
+     (responsive design = make the website look good on smaller screens size).-->
 
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
 
+    <!-- load the font Roboto from Google Fonts, -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/ccs2?family=Robot:wght@400;500;700&display=swap" rel="stylesheet">
 
-
-
-
-
-
-    <div></div>
-
-  </header>
+    <!-- our custom CSS for this page.-->
+     <link rel="stylesheet" href="styles/general.css">
+  </head>
   <body>
+    <header class="my-cv-header">
+      <section class="left-section">
+        <a href="cocodenelzen.com" class="header-link"></a>
+      </section>
+    </header>
+
+
+
+
     <script>
 
     </script>
