--- a/index.html
+++ b/index.html
@@ -10,17 +10,31 @@
     <!-- load the font Roboto from Google Fonts, -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/ccs2?family=Robot:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
     <!-- our custom CSS for this page.-->
-     <link rel="stylesheet" href="styles/general.css">
+     <link rel="stylesheet" href="./styles/general.css">
   </head>
   <body>
-    <header class="my-cv-header">
-      <section class="left-section">
-        <a href="cocodenelzen.com" class="header-link"></a>
-      </section>
-    </header>
+    <div class="my-cv-header">
+      <div class="left-section">
+        <a href="https://cocodenelzen.com" class="header-link">
+          <img class="profile-picture" src="images/coco-profile-image.jpg" alt="Coco den Elzen">
+        </a>
+      </div>
+
+      <div class="middle-section">
+        <p>Coco den Elzen</p>
+      </div>
+
+      <div class="right-section">
+        <a href="https://instagram.com/yourhandle">Instagram</a>
+        <a href="https://linkedin.com/in/yourhandle">LinkedIn</a>
+        <a href="mailto:you@example.com">Email</a>
+      </div>
+
+
+    </div>
 
 
 
