--- a/index.html
+++ b/index.html
@@ -1,323 +1,33 @@
-<!doctype html>
-<!--
-  LaunchLane – Single-page starter site
-  Tech: Plain HTML5 + CSS + minimal JS (no frameworks)
-  File paths:
-    - /styles/general.css
-    - /scripts/index.js
-  Notes:
-    - Semantic landmarks used: header, nav, main, section, footer
-    - Mobile-first, accessible, and beginner-friendly comments throughout
--->
-<html lang="en">
+<!DOCTYPE html>
+<!-- -->
+
+<html>
+<html lang="en"></html>
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>LaunchLane — Websites that Convert. Marketing that Scales.</title>
-    <meta
-      name="description"
-      content="LaunchLane designs fast, responsive websites and runs data-driven performance marketing to help your business grow."
-    />
-
-    <!-- Google Fonts (allowed). Inter is clean and readable. -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width-device-width, initial-scale=1">
+    <title>Welcome to my resumé</title>
+    <meta name="description" content="This is the resume of Coco den Elzen, CK Den elzen">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- Main stylesheet (required path) -->
-    <link rel="stylesheet" href="styles/general.css" />
-
-    <!-- Small icon for browser tab (optional). Using an emoji as data URL to keep it tiny. -->
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100' width='100'%3E%3Ctext y='0.9em' font-size='90'%3E%F0%9F%9A%80%3C/text%3E%3C/svg%3E">
-
-    <!-- Main script (required path). 'defer' ensures HTML loads first. -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/general.css">
     <script src="scripts/index.js" defer></script>
   </head>
-
   <body>
-    <!-- =========================
-         1) Header & Navigation
-         - Mobile menu button toggles with JS
-         - Links smooth-scroll to sections
-       ========================= -->
-    <header class="site-header" id="top">
-      <div class="container header-inner">
-        <!-- Text logo keeps things fast and editable -->
-        <a class="logo" href="#top" aria-label="LaunchLane Home">LaunchLane</a>
+    <header>
 
-        <!-- Accessible mobile menu button -->
-        <button
-          class="nav-toggle"
-          id="navToggle"
-          aria-controls="primaryNav"
-          aria-expanded="false"
-          aria-label="Open main menu"
-        >
-          <!-- Simple icon (hamburger) using 3 lines -->
-          <span aria-hidden="true" class="nav-toggle__bar"></span>
-          <span aria-hidden="true" class="nav-toggle__bar"></span>
-          <span aria-hidden="true" class="nav-toggle__bar"></span>
-        </button>
-
-        <!-- Primary navigation -->
-        <nav class="site-nav" aria-label="Primary">
-          <!--
-            The menu list is hidden on small screens until toggled open.
-            On larger screens it is always visible.
-          -->
-          <ul id="primaryNav" class="nav-menu">
-            <li><a href="#services" data-scroll="true">Services</a></li>
-            <li><a href="#process" data-scroll="true">Process</a></li>
-            <li><a href="#work" data-scroll="true">Work</a></li>
-            <li><a href="#testimonials" data-scroll="true">Testimonials</a></li>
-            <li><a href="#contact" class="btn btn--small" data-scroll="true">Contact</a></li>
-          </ul>
-        </nav>
-      </div>
     </header>
+    <main>
 
-    <main id="main-content">
-      <!-- =========================
-           2) Hero
-           - Single H1 for the page
-           - CTA buttons scroll to Work and Contact
-         ========================= -->
-      <section class="section hero" id="hero" aria-labelledby="hero-title">
-        <div class="container hero__grid">
-          <div class="hero__content">
-            <h1 id="hero-title">Websites that Convert. Marketing that Scales.</h1>
-            <p class="lead">
-              We design and build fast websites—and run data-driven campaigns to grow your revenue.
-            </p>
+      <footer>
 
-            <div class="hero__actions">
-              <a href="#contact" class="btn" data-scroll="true">Get a Free Strategy Call</a>
-              <a href="#work" class="btn btn--ghost" data-scroll="true">See Our Work</a>
-            </div>
-          </div>
+      </footer>
 
-          <!-- Decorative illustration block (no real image to keep it fast) -->
-          <div class="hero__art" aria-hidden="true"></div>
-        </div>
-      </section>
-
-      <!-- =========================
-           3) Services
-           - Two groups with simple emoji icons
-         ========================= -->
-      <section class="section" id="services" aria-labelledby="services-title">
-        <div class="container">
-          <h2 id="services-title">What We Do</h2>
-          <div class="grid services__grid">
-            <!-- Service Group: Web Design & Dev -->
-            <article class="card service-card">
-              <div class="service-card__icon" aria-hidden="true">🖥️</div>
-              <h3>Website Design &amp; Development</h3>
-              <ul class="list">
-                <li>Responsive layouts for all devices</li>
-                <li>Fast loading and SEO-friendly</li>
-                <li>Clear structure and easy editing</li>
-              </ul>
-            </article>
-
-            <!-- Service Group: Performance Marketing -->
-            <article class="card service-card">
-              <div class="service-card__icon" aria-hidden="true">📈</div>
-              <h3>Performance Marketing</h3>
-              <ul class="list">
-                <li>High-ROI ad campaigns</li>
-                <li>Analytics and reporting</li>
-                <li>Conversion tracking setup</li>
-              </ul>
-            </article>
-          </div>
-        </div>
-      </section>
-
-      <!-- =========================
-           4) Process
-           - 4 steps: Discover → Design → Build → Grow
-           - Stacks on mobile, horizontal on desktop
-         ========================= -->
-      <section class="section section--alt" id="process" aria-labelledby="process-title">
-        <div class="container">
-          <h2 id="process-title">Our Simple Process</h2>
-          <ol class="process">
-            <li class="process__step">
-              <span class="process__num" aria-hidden="true">1</span>
-              <h3 class="process__title">Discover</h3>
-              <p>We learn your goals, audience, and offer.</p>
-            </li>
-            <li class="process__step">
-              <span class="process__num" aria-hidden="true">2</span>
-              <h3 class="process__title">Design</h3>
-              <p>We wireframe and design a clear user journey.</p>
-            </li>
-            <li class="process__step">
-              <span class="process__num" aria-hidden="true">3</span>
-              <h3 class="process__title">Build</h3>
-              <p>We develop a fast, accessible site.</p>
-            </li>
-            <li class="process__step">
-              <span class="process__num" aria-hidden="true">4</span>
-              <h3 class="process__title">Grow</h3>
-              <p>We launch, track, and scale campaigns.</p>
-            </li>
-          </ol>
-        </div>
-      </section>
-
-      <!-- =========================
-           5) Portfolio
-           - 3 simple project cards with placeholder visuals
-         ========================= -->
-      <section class="section" id="work" aria-labelledby="work-title">
-        <div class="container">
-          <h2 id="work-title">Selected Work</h2>
-
-          <div class="grid portfolio__grid">
-            <!-- Card 1 -->
-            <article class="card project">
-              <!--
-                Using a decorative gradient box for the thumbnail to keep performance high.
-                role="img" + aria-label provides an accessible name.
-              -->
-              <div class="project__thumb" role="img" aria-label="Placeholder preview of SaaS Landing project"></div>
-              <div class="project__body">
-                <h3 class="project__title">SaaS Landing</h3>
-                <p class="project__text">High-converting landing page with clear CTA and fast load time.</p>
-              </div>
-            </article>
-
-            <!-- Card 2 -->
-            <article class="card project">
-              <div class="project__thumb project__thumb--b" role="img" aria-label="Placeholder preview of Local Café website"></div>
-              <div class="project__body">
-                <h3 class="project__title">Local Café</h3>
-                <p class="project__text">Menu, bookings, and reviews in a simple mobile-first site.</p>
-              </div>
-            </article>
-
-            <!-- Card 3 -->
-            <article class="card project">
-              <div class="project__thumb project__thumb--c" role="img" aria-label="Placeholder preview of Fitness Coach site"></div>
-              <div class="project__body">
-                <h3 class="project__title">Fitness Coach</h3>
-                <p class="project__text">Personal brand site with lead capture and scheduling.</p>
-              </div>
-            </article>
-          </div>
-        </div>
-      </section>
-
-      <!-- =========================
-           6) Testimonials
-           - Short quotes with names
-         ========================= -->
-      <section class="section section--alt" id="testimonials" aria-labelledby="testimonials-title">
-        <div class="container">
-          <h2 id="testimonials-title">Kind Words from Clients</h2>
-          <div class="grid testimonials__grid">
-            <figure class="testimonial">
-              <blockquote>
-                “LaunchLane rebuilt our site in two weeks and our conversions jumped immediately.”
-              </blockquote>
-              <figcaption>— Alex P., SaaS Founder</figcaption>
-            </figure>
-
-            <figure class="testimonial">
-              <blockquote>
-                “Their ad strategy paid for itself within the first month. Clear reports and real results.”
-              </blockquote>
-              <figcaption>— Priya S., E-commerce Owner</figcaption>
-            </figure>
-
-            <figure class="testimonial">
-              <blockquote>
-                “Fast, friendly, and focused on outcomes. Highly recommended.”
-              </blockquote>
-              <figcaption>— Daniel R., Fitness Coach</figcaption>
-            </figure>
-          </div>
-        </div>
-      </section>
-
-      <!-- =========================
-           7) CTA Banner
-           - Prompts user to book a call
-         ========================= -->
-      <section class="section cta-banner" aria-labelledby="cta-title">
-        <div class="container cta-banner__inner">
-          <h2 id="cta-title" class="cta-banner__title">Ready to grow faster?</h2>
-          <p class="cta-banner__text">Let’s map out a quick plan for your website and marketing.</p>
-          <a href="#contact" class="btn btn--inverse" data-scroll="true">Get a Free Strategy Call</a>
-        </div>
-      </section>
-
-      <!-- =========================
-           8) Contact
-           - Simple form with client-side validation
-           - No backend: we prevent default and show a success message
-         ========================= -->
-      <section class="section" id="contact" aria-labelledby="contact-title">
-        <div class="container contact__grid">
-          <div>
-            <h2 id="contact-title">Contact Us</h2>
-            <p>Tell us about your project. We’ll reply within 1 business day.</p>
-          </div>
-
-          <form id="contactForm" class="form" novalidate aria-describedby="formMessage">
-            <!-- Name -->
-            <div class="form__group">
-              <label for="name">Name</label>
-              <input id="name" name="name" type="text" autocomplete="name" required />
-            </div>
-
-            <!-- Email -->
-            <div class="form__group">
-              <label for="email">Email</label>
-              <input id="email" name="email" type="email" autocomplete="email" required />
-            </div>
-
-            <!-- Message -->
-            <div class="form__group">
-              <label for="message">Message</label>
-              <textarea id="message" name="message" rows="5" required></textarea>
-            </div>
-
-            <button type="submit" class="btn">Send Message</button>
-
-            <!-- Live region for validation / success messages -->
-            <p id="formMessage" class="form__message" role="status" aria-live="polite"></p>
-          </form>
-        </div>
-      </section>
     </main>
+    <script>
 
-    <!-- =========================
-         9) Footer
-       ========================= -->
-    <footer class="site-footer">
-      <div class="container footer-inner">
-        <p>&copy; <span id="year"></span> LaunchLane. All rights reserved.</p>
-
-        <nav aria-label="Footer">
-          <ul class="footer-nav">
-            <li><a href="#services" data-scroll="true">Services</a></li>
-            <li><a href="#work" data-scroll="true">Work</a></li>
-            <li><a href="#contact" data-scroll="true">Contact</a></li>
-          </ul>
-        </nav>
-
-        <!-- Social placeholders -->
-        <ul class="social">
-          <li><a href="#" aria-label="LaunchLane on Twitter (placeholder)">Twitter</a></li>
-          <li><a href="#" aria-label="LaunchLane on LinkedIn (placeholder)">LinkedIn</a></li>
-          <li><a href="#" aria-label="LaunchLane on Instagram (placeholder)">Instagram</a></li>
-        </ul>
-      </div>
-    </footer>
+    </script>
   </body>
 </html>
