--- a/index.html
+++ b/index.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
-<!-- -->
-
 <html>
   <head>
     <html lang="en">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to my resumé</title>
-    <meta name="description" content="This is the resume of Coco den Elzen, CK Den elzen">
+    <meta name="description" content="Resume of Coco den Elzen, CK den elzen, criteo, performance marketing, hanze UAS">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/general.css">
-    <script src="scripts/index.js" defer></script>
+    <title>CK den Elzen</title>
   </head>
   <body>
-    <header class="site-header" id="top">
-      <div class="container header-inner">
-          <img class="profile-picture" src="images/coco-profile-image.jpg">
-            <div>
-              <a class="my-name" aria-label="Coco den Elzen">Coco den Elzen</a>
-              <p class="sub-description-header">Campaign Manager @ Criteo, Performance Marketing, Agency Building</p>
+    <header class="site-header">
+       <img class="profile-pic" src="images/coco-profile-image.jpg">
+        <div class="name-block">
+          <h3 class="name">Coco den Elzen</h3>
+            <div class="my-title">
+              <p class="job-title">Campaign Manager @ Criteo</p>
+              <p class="job-industry">Performance Marketing &amp; Coding</p>
             </div>
-        <nav class="site-nav" aria-label="primary">
-        <!-- this is where the site header navigation will be for projects, work experience, etc-->
-          <ul id="primaryNav" class="nav-menu">
-            <li><a href="#projects" data-scroll="true">Projects</a></li>
-            <li><a href="#experience" data-scroll="true">Experience</a></li>
-            <li><a href="#degree" data-scroll="true">Degree</a></li>
+        </div>
+        
+        <nav class="nav">
+          <ul class="site-header-navigation">
+            <a class="about-me">About me</a>
+            <a class="my-work">My work</a>
+            <a class="contact">Contact</a>
           </ul>
         </nav>
-      </div>
     </header>
     <main>
-
-      <footer>
-
-      </footer>
+      <div>
+        <h1>About Coco den Elzen</h1>
+        <p>As a Campaign Manager at Criteo, I support key European clients in optimising their performance marketing strategies. I manage end-to-end campaigns, prospecting, retargeting, and retention, focused on driving measurable growth. My role involves daily data analysis, audience segmentation, budget pacing, and campaign troubleshooting. I closely monitor placement quality, brand safety, and creative performance, ensuring campaigns meet both efficiency and scale objectives. By combining analytical insights with hands-on strategy, I help partners maximise their return on ad spend and achieve long-term success.</p>
+      </div>
+      <div>
+        <img class="hanze" src="images/hanze.jpg">
+        <img class="rgu" src="images/rgu.jpg">
+        <img class="criteo" src="images/criteo.jpg">
+      </div>
 
     </main>
     <script>
@@ -44,3 +47,12 @@
     </script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
