--- a/index.html
+++ b/index.html
@@ -14,37 +14,38 @@
   <body>
     <header class="site-header">
        <img class="profile-pic" src="images/coco-profile-image.jpg">
+
         <div class="name-block">
           <h3 class="name">Coco den Elzen</h3>
             <div class="my-title">
-              <p class="job-title">Campaign Manager @ Criteo</p>
+              <p class="job-title">Campaign Manager @ Criteo,</p>
               <p class="job-industry">Performance Marketing &amp; Coding</p>
             </div>
         </div>
-        
+
         <nav class="nav">
           <ul class="site-header-navigation">
-            <a class="about-me">About me</a>
-            <a class="my-work">My work</a>
-            <a class="contact">Contact</a>
+            <li><a href="#about">About me</a></li>
+            <li><a href="#work">My work</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
     </header>
     <main>
-      <div>
-        <h1>About Coco den Elzen</h1>
-        <p>As a Campaign Manager at Criteo, I support key European clients in optimising their performance marketing strategies. I manage end-to-end campaigns, prospecting, retargeting, and retention, focused on driving measurable growth. My role involves daily data analysis, audience segmentation, budget pacing, and campaign troubleshooting. I closely monitor placement quality, brand safety, and creative performance, ensuring campaigns meet both efficiency and scale objectives. By combining analytical insights with hands-on strategy, I help partners maximise their return on ad spend and achieve long-term success.</p>
-      </div>
-      <div>
-        <img class="hanze" src="images/hanze.jpg">
-        <img class="rgu" src="images/rgu.jpg">
-        <img class="criteo" src="images/criteo.jpg">
-      </div>
-
+      <section class="logo-strip" id="work" aria-label="education & work">
+        <div class="logo-stack">
+          <img class="logo-img" src="images/hanze.jpg">
+          <img class="logo-img" src="images/rgu.jpg">
+          <img class="logo-img" src="images/criteo.jpg">
+        </div>
+      </section>
+      <section class="about" id="about">
+        <div class="container">
+          <h2>About me</h2>
+          <p>As a Campaign Manager at Criteo, I support key European clients in optimising their performance marketing strategies. I manage end-to-end campaigns, prospecting, retargeting, and retention, focused on driving measurable growth. My role involves daily data analysis, audience segmentation, budget pacing, and campaign troubleshooting. I closely monitor placement quality, brand safety, and creative performance, ensuring campaigns meet both efficiency and scale objectives. By combining analytical insights with hands-on strategy, I help partners maximise their return on ad spend and achieve long-term success.</p>
+        </div>
+      </section>
     </main>
-    <script>
-
-    </script>
   </body>
 </html>
 
