First Step into the right direction

--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
   <body>
     <header class="site-header">
        <img class="profile-pic" src="images/coco-profile-image.jpg">
+
         <div class="name-block">
           <h3 class="name">Coco den Elzen</h3>
             <div class="my-title">
-              <p class="job-title">Campaign Manager @ Criteo</p>
+              <p class="job-title">Campaign Manager @ Criteo,</p>
               <p class="job-industry">Performance Marketing &amp; Coding</p>
             </div>
         </div>
-        
+
         <nav class="nav">
           <ul class="site-header-navigation">
-            <a class="about-me">About me</a>
-            <a class="my-work">My work</a>
-            <a class="contact">Contact</a>
+            <li><a href="#about">About me</a></li>
+            <li><a href="#work">My work</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
     </header>
