Alt text to images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="site-header">
-       <img class="profile-pic" src="images/coco-profile-image.jpg">
+       <img class="profile-pic" src="images/coco-profile-image.jpg" alt="Mr. Coco den Elzen">
 
         <div class="name-block">
           <h3 class="name">Coco den Elzen</h3>
@@ -34,9 +34,9 @@
     <main>
       <section class="logo-strip" id="work" aria-label="education & work">
         <div class="logo-stack">
-          <img class="logo-img" src="images/hanze.jpg">
-          <img class="logo-img" src="images/rgu.jpg">
-          <img class="logo-img" src="images/criteo.jpg">
+          <img class="logo-img" src="images/hanze.jpg" alt="Hanze UAS">
+          <img class="logo-img" src="images/rgu.jpg" alt="RGU"">
+          <img class="logo-img" src="images/criteo.jpg" alt="Criteo">
         </div>
       </section>
       <section class="about" id="about">
