fix mobile layout height image stack

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <p>As a Campaign Manager at Criteo, I support key European clients in optimising their performance marketing strategies. I manage end-to-end campaigns, prospecting, retargeting, and retention, focused on driving measurable growth. My role involves daily data analysis, audience segmentation, budget pacing, and campaign troubleshooting. I closely monitor placement quality, brand safety, and creative performance, ensuring campaigns meet both efficiency and scale objectives. By combining analytical insights with hands-on strategy, I help partners maximise their return on ad spend and achieve long-term success.</p>
         </div>
       </section>
+      <section class="experience">
+
+      </section>
     </main>
   </body>
 </html>
