--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
         <li><a href="">Goals</a></li>
       </ul>
     </nav>
+
+    <section>
+      <article>
+        <H1>About Me</H1>
+        <p>Hi, I’m Coco. I work as an Account Manager at Amazon, with a background in programmatic advertising and campaign management.<br>I started my career at Criteo, where I joined as an intern and grew into a Campaign Manager role. Along the way, I had the chance to work internationally, starting out in Barcelona and eventually moving back to the Netherlands, where I’m originally from. I enjoy roles that sit at the intersection of strategy, data, and people, and I’m always curious about how things work behind the scenes.<br>Outside of work, I love learning new things (currently teaching myself how to code), playing golf, going to the gym, and planning my next trip. This website is my little corner of the internet where I share what I’m working on, what I’m learning, and things that inspire me along the way.<br>Thanks for stopping by.</p>
+      </article>
+    </section>
   </body>
   <footer>
 
