New sections and code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <!-- This is the navigation of my website-->
     <nav>
       <ul>
-        <li><a href="about me">About Me</a></li>
+        <li><a href="">About Me</a></li>
+        <li><a href="">My Story</a></li>
         <li><a href="">Experience</a></li>
         <li><a href="">Projects</a></li>
         <li><a href="">Goals</a></li>
@@ -24,7 +25,11 @@
 
     <!-- Here I want to list my storie, so where I started, and where I am at currently-->
     <section>
-      
+      <article>
+        <h2>Where I am from</h2>
+        <p>I am born and raised in The Netherlands, specifically Capelle aan den IJssel. When I was young I eventually moved to the province Utrecht where I started my primary school years, and eventually moved to Drenthe, where I stayed till I moved abroad.</p>
+        <image src=""></image>
+      </article>
     </section>
   </body>
   <footer>
