--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </nav>
 
   <!-- This is the section where I introduce myself (About me)-->
-    <section id="about me">
+    <section id="About Me">
       <article>
         <H1>About Me</H1>
         <p>Hi, I’m Coco. I work as an Account Manager at Amazon, with a background in programmatic advertising and campaign management.<br><br>I started my career at Criteo, where I joined as an intern and grew into a Campaign Manager role. Along the way, I had the chance to work internationally, starting out in Barcelona and eventually moving back to the Netherlands, where I’m originally from. I enjoy roles that sit at the intersection of strategy, data, and people, and I’m always curious about how things work behind the scenes.<br><br>Outside of work, I love learning new things (currently teaching myself how to code), playing golf, going to the gym, and planning my next trip. This website is my little corner of the internet where I share what I’m working on, what I’m learning, and things that inspire me along the way.<br><br>Thanks for stopping by.</p>
@@ -28,7 +28,12 @@
       <article>
         <h2>Where I am from</h2>
         <p>I am born and raised in The Netherlands, specifically Capelle aan den IJssel. When I was young I eventually moved to the province Utrecht where I started my primary school years, and eventually moved to Drenthe, where I stayed till I moved abroad.</p>
-        <image src=""></image>
+        <figure></figure>
+        <figcaption></figcaption>
+      </article>
+      <article>
+        <h2>My Studies</h2>
+        <p>I started my studies</p>
       </article>
     </section>
   </body>
