--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
       </article>
       <article>
         <h2>My Studies</h2>
-        <p>I started my studies</p>
+        <p>I started my studies in Groningen at Hanze University of Applied Sciences where I was studying the International Business curriculum. I studied here during the years 2020 and 2025, with a small gap year I needed to take because of a delay in my internship.</p>
+        <p>During Hanze we had a year abroad which was part of the curriculum where I went to Scotland where I studied a international business management minor at RGU. After this I went to the sunny Barcelona where I did my internship for Criteo which is a programmatic advertsing company. </p>
+        <figure></figure>
+        <figcaption></figcaption>
       </article>
     </section>
   </body>
