--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="./styles/general.css" ref="stylesheet">
+    <link href="./styles/general.css" rel=stylesheet>
   </head>
   <body>
   <!-- This is the navigation of my website-->
