--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
   <!-- This is the navigation of my website-->
-    <nav>
-      <ul>
+    <nav class="navigation">
+      <ul class="navigation-options">
         <li><a href="">About Me</a></li>
         <li><a href="">My Story</a></li>
         <li><a href="">Experience</a></li>
@@ -16,21 +16,25 @@
     </nav>
 
   <!-- This is the section where I introduce myself (About me)-->
-    <section id="About Me">
-      <article>
+    <section id="About Me" class="about-me">
+      <article class="about-me-text">
         <H1>About Me</H1>
         <p>Hi, I’m Coco. I work as an Account Manager at Amazon, with a background in programmatic advertising and campaign management.<br><br>I started my career at Criteo, where I joined as an intern and grew into a Campaign Manager role. Along the way, I had the chance to work internationally, starting out in Barcelona and eventually moving back to the Netherlands, where I’m originally from. I enjoy roles that sit at the intersection of strategy, data, and people, and I’m always curious about how things work behind the scenes.<br><br>Outside of work, I love learning new things (currently teaching myself how to code), playing golf, going to the gym, and planning my next trip. This website is my little corner of the internet where I share what I’m working on, what I’m learning, and things that inspire me along the way.<br><br>Thanks for stopping by.</p>
-      </article>
+]      </article>
+       <img src="./images/coco-profile-image.jpg" class="about-me-image">
     </section>
 
     <!-- Here I want to list my storie, so where I started, and where I am at currently-->
-    <section>
+    <section class="where-i-am-from">
       <article>
         <h2>Where I am from</h2>
         <p>I am born and raised in The Netherlands, specifically Capelle aan den IJssel. When I was young I eventually moved to the province Utrecht where I started my primary school years, and eventually moved to Drenthe, where I stayed till I moved abroad.</p>
         <figure></figure>
         <figcaption></figcaption>
       </article>
+    </section>
+
+    <section class="my-studies">
       <article>
         <h2>My Studies</h2>
         <p>I started my studies in Groningen at Hanze University of Applied Sciences where I was studying the International Business curriculum. I studied here during the years 2020 and 2025, with a small gap year I needed to take because of a delay in my internship.</p>
@@ -39,6 +43,7 @@
         <figcaption></figcaption>
       </article>
     </section>
+
   </body>
   <footer>
 
