--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <!-- This is the navigation of my website-->
     <nav class="navigation">
       <ul class="navigation-options">
-        <li><a href="">About Me</a></li>
-        <li><a href="">My Story</a></li>
-        <li><a href="">Experience</a></li>
-        <li><a href="">Projects</a></li>
-        <li><a href="">Goals</a></li>
+        <li><a>About Me</a></li>
+        <li><a>My Story</a></li>
+        <li><a>Experience</a></li>
+        <li><a>Projects</a></li>
+        <li><a>Goals</a></li>
       </ul>
     </nav>
 
